added api sign out for user and add authorize for check token
